bug 11449: Fixed typo (mismatched quote) in description of the "security.xml.xenc.encryptEmptyElements" cluster property.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30050 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1462,7 +1462,7 @@ security.xml.dsig.idAttributeNames.default = {http://docs.oasis-open.org/wss/200
 security.xml.dsig.idAttributeNames.clusterProperty = security.xml.dsig.idAttributeNames
 security.xml.dsig.idAttributeNames.systemProperty = com.l7tech.common.security.xml.idAttributeConfig
 
-security.xml.xenc.encryptEmptyElements.description = Whether the Encrypt Element assertion should encrypt the content of empty elements. Set this to "false" to leave empty elements unencrypted. Setting this to 'false" restores pre-v6.1.5 behaviour and is required for interoperability with earlier versions of the SecureSpan XML VPN Client. (true/false; default=true)
+security.xml.xenc.encryptEmptyElements.description = Whether the Encrypt Element assertion should encrypt the content of empty elements. Set this to "false" to leave empty elements unencrypted. Setting this to "false" restores pre-v6.1.5 behaviour and is required for interoperability with earlier versions of the SecureSpan XML VPN Client. (true/false; default=true)
 security.xml.xenc.encryptEmptyElements.clusterProperty = security.xml.xenc.encryptEmptyElements
 security.xml.xenc.encryptEmptyElements.systemProperty = com.l7tech.security.xml.encryptEmptyElements
 security.xml.xenc.encryptEmptyElements.default = true
