--- a/etc/db/mysql/my.cnf
+++ b/etc/db/mysql/my.cnf
@@ -70,9 +70,10 @@ slave_exec_mode=IDEMPOTENT
 user=mysql
 basedir=/usr
 
-[safe_mysqld]
-err-log=/var/log/mysqld.log
+[mysqld_safe]
+log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
+
 [mysql]
 # command line imports of audit data can fail with max allowed packet size
 # This will help
