SSM-3669: Enable repacking of Applet Jar in official build
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30176 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -2959,6 +2959,7 @@
         <property name="module.obfuscate" value="true"/>
         <property name="module.official.build" value="true"/>
         <property name="pack200" value="true"/>
+        <property name="module.pack200" value="true"/>
     </target>
 
     <!--
