SSG-5339  Fix for FTP transport  Connection closed unexpectedly
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30198 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-normal.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-normal.properties
@@ -18,7 +18,7 @@ config.connection-manager.max-login = 10
 config.connection-manager.anonymous-login-enabled = true
 config.connection-manager.max-anonymous-login = 10
 config.connection-manager.default-idle-time = 60
-config.connection-manager.timeout-poll-inverval = 10
+config.connection-manager.timeout-poll-interval = 10
 
 # Ip restrictor
 config.ip-restrictor.class = com.l7tech.server.transport.ftp.FtpIpRestrictor
