--- a/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-ssl.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-ssl.properties
@@ -18,7 +18,7 @@ config.connection-manager.max-login = 10
 config.connection-manager.anonymous-login-enabled = true
 config.connection-manager.max-anonymous-login = 10
 config.connection-manager.default-idle-time = 60
-config.connection-manager.timeout-poll-inverval = 10
+config.connection-manager.timeout-poll-interval = 10
 
 # Ip restrictor
 config.ip-restrictor.class = com.l7tech.server.transport.ftp.FtpIpRestrictor
