SSM-3708: fixed by replacing the Hostname, Port and Service Name fileds with a single URL field for ICAP server.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30221 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -17,15 +17,13 @@ main.checkbox.failAssertion=&Continue processing if virus found.
 server.button.ok=&OK
 server.button.cancel=&Cancel
 
-server.label.hostname=Hostname:
-server.label.serviceName=Service Name:
-server.label.port=Port Number:
-server.label.parameters=Service Parameters:
+server.label.parameters=Service Parameters
 server.label.maxdepth=Max MIME Depth:
 server.button.testConnection=&Test Connection
 
 param.label.name=Parameter Name
 param.label.value=Parameter Value
+icapServerUrl=ICAP Server URL:
 
 
 
