Update modular assertion classloading and add "layer7-gateway-idea-runtime" module. Developers can run the Gateway using this module to avoid having to redeploy modular assertions on each code change.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30257 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/config.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/config.properties
@@ -59,5 +59,9 @@ modConfDirectory.default = ${ssg.run}${fs}modules${fs}conf
 modConfDirectory.systemProperty = ${propertyPrefix}.moduleConfigDirectory
 modConfDirectory.setSystemProperty = true
 
+# Internal configuration setting for modular assertion classloading
+ssg.modularAssertions.useApplicationClasspath.description = Should the application classpath be used when loading modular assertion classes
+ssg.modularAssertions.useApplicationClasspath.default = false
+
 include-resource = com/l7tech/server/resources/serverconfig.properties
 include-file = ${ssg.conf}/serverconfig_override.properties
