SSG-5358: fix the UI for connection and read timeout to be ms
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30283 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -2,8 +2,8 @@ serviceUrlLabel.text = Service &URL:
 defaultUrlButton.text = Use &Default
 cookiePolicyPanel.title = Cookie Policy
 cookiePolicyCheckbox.text = Enable HTTP Cookies
-timeoutConnectLabel.text = Connection Timeout (in seconds):
-timeoutLabel.text = Read Timeout (in seconds):
+timeoutConnectLabel.text = Connection Timeout (in milliseconds):
+timeoutLabel.text = Read Timeout (in milliseconds):
 timeoutRadioDefaultLabel.text = Use System Default
 retries.label=Maximum Retries:
 authPanel.title = Service Authentication
