--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
@@ -59,3 +59,4 @@ toggle.status.bar.action.name = Status Bar
 toggle.status.bar.action.desc = Enable the status bar when viewing a Web service policy
 toggle.policy.msg.action.name = Policy Messages
 toggle.policy.msg.action.desc = Enable the message pane when viewing a Web Service policy
+Search = Search
