SSM-3699: add context variable prefix customization
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30364 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -24,6 +24,7 @@ server.button.testConnection=&Test Connection
 param.label.name=Parameter Name
 param.label.value=Parameter Value
 icapServerUrl=ICAP Server URL:
+varPrefix.label=Context Variable Prefix:
 
 
 
