bug 11512: Added "Prefer to use this device for all cryptographic operations" to the Enable Luna dialog (defaults to true, to preserve previous behavior).  Unchecking this checkbox causes the Luna providers to be installed as least-preference.
This version of the fix is currently completely untested -- followup commits may be required after we get our Luna devices working again, if problems are discovered.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30373 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1100,6 +1100,13 @@ keyStore.luna.lunaSlotNum.default=-1
 keyStore.luna.lunaSlotNum.systemProperty=com.l7tech.lunaSlotNum
 keyStore.luna.lunaSlotNum.clusterProperty=keyStore.luna.lunaSlotNum
 
+keyStore.luna.installAsLeastPreference.description = Whether to install the Luna provider as the least-preference security provider. (boolean; default false)
+keyStore.luna.installAsLeastPreference.visible=false
+keyStore.luna.installAsLeastPreference.default=false
+keyStore.luna.installAsLeastPreference.systemProperty=com.l7tech.luna.installAsLeastPreference
+keyStore.luna.installAsLeastPreference.clusterProperty=keyStore.luna.installAsLeastPreference
+keyStore.luna.installAsLeastPreference.validation.regex = ${regex.boolean}
+
 license.expiryWarnAge.description = Time in days before a license/SSL expiry warning is displayed (eg 30d)
 license.expiryWarnAge.default = 30d
 license.expiryWarnAge.clusterProperty = license.expiryWarningPeriod
