SSG-5374: Add support for idle timeout of outbound HTTP connections. It may be necessary to configure an idle timeout when using NTLM with client provided credentials to prevent excessive pooled connections (if there are many active clients with distinct credentials). There is no idle timeout by default and the configuration (cluster properties) are not visible. There is also a new (hidden) cluster property to enable stale checking of connections as this can interfere with idle checking.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30385 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -585,6 +585,27 @@ ioHttpProxy.systemProperty = ${propertyPrefix}.ioHttpProxy
 ioHttpProxy.clusterProperty = ioHttpProxy
 ioHttpProxy.visible = false
 
+ioHttpConnectionIdleInterval.description = Interval between checks for outbound HTTP connection timeout (timeunit)
+ioHttpConnectionIdleInterval.default = 5s
+ioHttpConnectionIdleInterval.systemProperty = com.l7tech.server.transport.http.httpConnectionIdleInterval
+ioHttpConnectionIdleInterval.clusterProperty = io.httpConnectionIdleInterval
+ioHttpConnectionIdleInterval.validation.type = timeUnit
+ioHttpConnectionIdleInterval.visible = false
+
+ioHttpConnectionIdleTimeout.description = Maximum idle time for outbound HTTP connections, 0 for no timeout (timeunit)
+ioHttpConnectionIdleTimeout.default = 0s
+ioHttpConnectionIdleTimeout.systemProperty = com.l7tech.server.transport.http.httpConnectionIdleTimeout
+ioHttpConnectionIdleTimeout.clusterProperty = io.httpConnectionIdleTimeout
+ioHttpConnectionIdleTimeout.validation.type = timeUnit
+ioHttpConnectionIdleTimeout.visible = false
+
+ioHttpConnectionTestingEnabled.description = Should idle outbound HTTP connections be tested to ensure they are valid (boolean)
+ioHttpConnectionTestingEnabled.default = true
+ioHttpConnectionTestingEnabled.systemProperty = com.l7tech.common.http.prov.apache.staleCheckEnabled
+ioHttpConnectionTestingEnabled.clusterProperty = io.httpConnectionTestingEnabled
+ioHttpConnectionTestingEnabled.validation.regex = ${regex.boolean}
+ioHttpConnectionTestingEnabled.visible = false
+
 ioJmsErrorSleep.description = Time to sleep after a connection error for an inbound JMS Queue (timeunit)
 ioJmsErrorSleep.default = 60s
 ioJmsErrorSleep.clusterProperty = jms.connectErrorSleep
