--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PolicyFolderPropertyDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PolicyFolderPropertyDialog.properties
@@ -2,10 +2,10 @@
 policyFolderProperties.window.title=Email Listener Properties
 
 # Base Settings strings
-settings.name.label=&Name
+settings.name.label=&Name:
 settings.name.dialog.title=Invalid folder name
 settings.name.dialog.text=The name is required.
 
 # Ok and cancel button strings
 okButton.text=&OK
-cancelButton.text=Cance&l
+cancelButton.text=&Cancel
