Lock audit messages to prevent modular assertions attempting to register their own.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30401 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -243,6 +243,10 @@ audit.sink.url.description = Default URL to which audit records will be posted v
 audit.sink.url.default = http://localhost:4680/
 audit.sink.url.clusterProperty = audit.sink.url
 
+audit.lockMessages.description = Should audit messges be locked after registration of known messages (boolean)
+audit.lockMessages.default = true
+audit.lockMessages.systemProperty = com.l7tech.gateway.common.audit.lockMessages
+
 auditMessageThreshold.description = Minimum level required of a Message Audit Record for it to be saved to the database (Level)
 auditMessageThreshold.default = WARNING
 auditMessageThreshold.systemProperty = ${propertyPrefix}.audit.messageThreshold
