SSM-3734: fixed by updating panel labels to include word 'Validation' and changing Issue Instant to IssueInstant
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30415 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/ProcessSamlAttributeQueryRequestPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/ProcessSamlAttributeQueryRequestPropertiesDialog.properties
@@ -1,4 +1,4 @@
-requestRequirements=Request Requirements
+requestRequirements=Request Validation
 attributeQueryValidation=AttributeQuery Validation
 samlVersion=SAML Version:
 soapEncapsulated=SOAP Encapsulated
@@ -6,11 +6,11 @@ requireIssuer=Issuer
 requireSignature=Signature
 requireId=ID
 requireVersion=Version
-requireIssueInstant=Issue Instant
+requireIssueInstant=IssueInstant
 requireConsent=Consent
 requireDestination=Destination:
 
-subjectPanel=Subject
+subjectPanel=Subject Validation
 subjectNameFormat=NameFormat
 subjectIdentifiers_Allow=Allow:
 subjectIdentifier_NameId=NameID
