--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -24,7 +24,7 @@ server.button.testConnection=&Test Connection
 param.label.name=Parameter Name
 param.label.value=Parameter Value
 icapServerUrl=ICAP Server URL:
-varPrefix.label=Context Variable Prefix:
+varPrefix.label=Variable Prefix:
 
 
 
