MQ Native Queue Progress: implemented Override maximum message size for the inbound option, and introduced a new cluster property, "io.mqMessageMaxBytes" with a default value, 2621440.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30446 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -647,6 +647,13 @@ ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.validation.type = long
 ioJmsMessageMaxBytes.validation.min = 0
 
+ioMqMessageMaxBytes.description = Maximum number of bytes permitted for a MQ Native Queue message, or 0 for unlimited (Integer)
+ioMqMessageMaxBytes.default = 2621440
+ioMqMessageMaxBytes.systemProperty = ${propertyPrefix}.mqMessageMaxBytes
+ioMqMessageMaxBytes.clusterProperty = io.mqMessageMaxBytes
+ioMqMessageMaxBytes.validation.type = long
+ioMqMessageMaxBytes.validation.min = 0
+
 ioEmailMessageMaxBytes.description = Maximum number of bytes permitted for an email message, or 0 for unlimited (Integer)
 ioEmailMessageMaxBytes.default = 2621440
 ioEmailMessageMaxBytes.clusterProperty = io.emailMessageMaxBytes
