bug 9150: Initial implementation. Added ability to set variables of a java.util.Date type. Added formatting ability so the datetime value can be added in a specific format. Previously only String and Message types were supported. Added datetime formats to cluster-wide properties. Set Context Variable assertion can get Date/Time formats from datetime.format.values cluster property. Added default format values to serverconfig.properties
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30495 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1784,3 +1784,7 @@ db.replicationErrorAuditInterval.description = The minimum interval between succ
 db.replicationErrorAuditInterval.default = 60m
 db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInterval
 db.replicationErrorAuditInterval.validation.type = timeUnit
+
+datetime.format.values.description=Date/Time input format values separated by semicolon
+datetime.format.values.default=yyyy-MM-dd'T'HH:mm:ss.SSS'Z';yyyy-MM-dd hh:mm:ss aaa;yyyy-MM-dd HH:mm:ss.SSS;yyyy-MM-dd HH:mm:ss.SSSZ;MM/dd/yyyy HH:mm:ss.SSS Z;MM/dd/yyyy hh:mm:ss aaa z;EEE, MMM d, yyyy hh:mm:ss aaa Z;dd.MM.yyyy HH:mm:ss Z, yyyy.MM.dd
+datetime.format.values.clusterProperty = datetime.format.values
