--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SetSamlStatusPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SetSamlStatusPropertiesDialog.properties
@@ -1,5 +1,5 @@
 # Resource bundle for SetSamlStatusPropertiesDialog
 
 version.label=SAML &Version:
-status.label=Response &Status:
+status.label=SAML Response &Status:
 variableName.label=&Output Variable:
