Add a hidden cluster property to allow overriding of the HTTP headers that should not be forwarded.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30531 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -547,6 +547,12 @@ ioHttpNoKeepAlive.default = false
 ioHttpNoKeepAlive.clusterProperty = io.httpDisableKeepAlive
 ioHttpNoKeepAlive.validation.regex = ${regex.boolean}
 
+ioHttpHeadersToSkip.description = List of HTTP headers to skip when passing outbound request or inbound response headers (comma-separated list)
+ioHttpHeadersToSkip.default = Connection, Content-Encoding, Content-Length, Content-Type, Date, Keep-Alive, Server, Transfer-Encoding
+ioHttpHeadersToSkip.clusterProperty = io.httpHeadersToSkip
+ioHttpHeadersToSkip.systemProperty = com.l7tech.policy.assertion.HttpPassthroughRuleSet.headersToSkip
+ioHttpHeadersToSkip.visible = false
+
 ioHttpVersion.description = The HTTP version to use (1.0/1.1)
 ioHttpVersion.default = 1.1
 ioHttpVersion.clusterProperty = io.httpVersion
