--- a/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-normal.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-normal.properties
@@ -19,6 +19,7 @@ config.connection-manager.anonymous-login-enabled = true
 config.connection-manager.max-anonymous-login = 10
 config.connection-manager.default-idle-time = 60
 config.connection-manager.timeout-poll-interval = 10
+config.connection-manager.class = com.l7tech.server.transport.ftp.FtpConnectionManager
 
 # Ip restrictor
 config.ip-restrictor.class = com.l7tech.server.transport.ftp.FtpIpRestrictor
