SSG-5391: Add "Use certificate from context variable" option to "Add or Remove WS-Security" assertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30539 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/WsSecurityPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/WsSecurityPropertiesDialog.properties
@@ -13,7 +13,7 @@ omitActor.label = Omi&t actor attribute
 secureSpanActor.label = Use Layer 7 &actor
 version.label = &Version:
 selectedRecipient.label = Use &selected certificate for default recipient
-lookupRecipient.label = &Lookup default recipient by name
+lookupRecipient.label = Lookup default recipient by &name
 button.select = Select
 defaultRecipient.label = Use &default certificate
 chooseRecipient.label = Select the default recipient certificate for use with XML Encryption:
@@ -21,3 +21,4 @@ certName.label = Name:
 certSubject.label = Subject:
 certIssuer.label = Issued By:
 clearSecurity.label = C&lear WS-Security
+variableRecipient.label=Use certificate from context varia&ble
