Allow form compilation (which includes Nullable/NotNull annotations) to be disabled. Add path with EMMA classes for use in coverage build. Disable tests that require use of the form compiler in coverage builds (as @Nullable/@NotNull are not compatible with code coverage)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30573 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/GatewayManagementAssertion/build.xml
+++ b/modules/gateway/assertions/GatewayManagementAssertion/build.xml
@@ -29,10 +29,7 @@
             <pathelement location="${classes.main.dir}"/>
             <pathelement location="${basedir}/build/tools"/>
             <path refid="gatewaymanagementassertion.generate.wsdl.path.libs"/>
-            <!--
-              For a coverage build EMMA classes need to be available at runtime.
-            -->
-            <pathelement location="/opt/TeamCity/buildAgent/plugins/idea/plugins/emma/lib/emma.jar"/>
+            <path refid="extras.path.id"/>
         </path>
 
         <pathconvert property="gatewaymanagementassertion.generate.wsdl.path.text" targetos="unix" pathsep="${line.separator}"
