Add hidden cluster properties to allow configuration of "extra" namespaces for SOAP 1.1 and WS-Security 1.0. The defaults are the same as the current (inconsistent) hardcoded values.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30586 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1663,6 +1663,24 @@ wss.decorator.timestamp.omitNanos.clusterProperty = wss.decorator.omitNanos
 wss.decorator.timestamp.omitNanos.systemProperty = com.l7tech.server.timestamp.omitNanos
 wss.decorator.timestamp.omitNanos.validation.regex = ${regex.boolean}
 
+namespaces.wss10Extras.description = Namespaces to treat as WS-Security 1.0 equivalent (space separated list)
+namespaces.wss10Extras.default = http://schemas.xmlsoap.org/ws/2002/12/secext http://schemas.xmlsoap.org/ws/2002/07/secext http://schemas.xmlsoap.org/ws/2002/xx/secext http://schemas.xmlsoap.org/ws/2003/06/secext
+namespaces.wss10Extras.clusterProperty = namespaces.wss10Extras
+namespaces.wss10Extras.systemProperty = com.l7tech.util.wss10ExtraNs
+namespaces.wss10Extras.visible = false
+
+namespaces.wsu10Extras.description = Namespaces to treat as WS-Security 1.0 utility equivalent (space separated list)
+namespaces.wsu10Extras.default = http://schemas.xmlsoap.org/ws/2002/07/utility http://schemas.xmlsoap.org/ws/2003/06/utility
+namespaces.wsu10Extras.clusterProperty = namespaces.wsu10Extras
+namespaces.wsu10Extras.systemProperty = com.l7tech.util.wsu10ExtraNs
+namespaces.wsu10Extras.visible = false
+
+namespaces.soap11Extras.description = Namespaces to treat as SOAP 1.1 equivalent (space separated list)
+namespaces.soap11Extras.default = http://www.w3.org/2001/06/soap-envelope http://www.w3.org/2001/09/soap-envelope urn:schemas-xmlsoap-org:soap.v1
+namespaces.soap11Extras.clusterProperty = namespaces.soap11Extras
+namespaces.soap11Extras.systemProperty = com.l7tech.util.soap11ExtraNs
+namespaces.soap11Extras.visible = false
+
 security.fips.enabled.description = Enable only FIPS-compliant cryptographic algorithms.  (true/false)
 security.fips.enabled.default=false
 security.fips.enabled.clusterProperty=security.fips.enabled
