SSG-5408: Fix for Cannot retrieve WSDL from gateway over HTTP when basic authentication header is present (with passthrough)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30598 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -941,6 +941,13 @@ wsdlImportProxyEnabled.default = false
 wsdlImportProxyEnabled.clusterProperty = service.wsdlDependenciesEnabled
 wsdlImportProxyEnabled.validation.regex = ${regex.boolean}
 
+wsdlProxy.allowInsecureHttpBasic.description = Permit WSDL download authentication using HTTP Basic over HTTP, by default only HTTPS is permitted (true/false)
+wsdlProxy.allowInsecureHttpBasic.default = false
+wsdlProxy.allowInsecureHttpBasic.systemProperty = ${propertyPrefix}.wsdlProxy.allowInsecureHttpBasic
+wsdlProxy.allowInsecureHttpBasic.clusterProperty = wsdlProxy.allowInsecureHttpBasic
+wsdlProxy.allowInsecureHttpBasic.validation.regex = ${regex.boolean}
+wsdlProxy.allowInsecureHttpBasic.visible = false
+
 wsdlQuery.description = Permit download of WSDL using '?wsdl' URL suffix. When enabled, WSDL documents can be downloaded using the Service's resolution path (true/false)
 wsdlQuery.default = true
 wsdlQuery.clusterProperty = service.wsdlQueryEnabled
