SSG-5460: fixed by standardizing SAML issuer configuration by adding new SamlIssuerPanel panel, extracted from IssuerWizardStepPanel, which is used where ever an Issuer needs to be configured. Renamed and added common SAML interfaces for configuration. When configuring SAML 2.0 protocol messages the panel allows Issuer to be optional. New Issuer tab added to Build SAML Protocol Response due to size of SamlIssuerPanel. Added test coverage.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30615 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
@@ -22,3 +22,5 @@ responseElements.encryptedAssertions.2_0_only=EncryptedAssertion(s):
 responseElements.extensions.2_0_only=Extensions:
 validateWebSsoRules=Validate Web SSO Rules
 addIssuer=Add Issuer
+issuerPanel=Issuer
+generalTab=General
