SSG-5171: Add cluster property for server retry delay with failure strategies.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30617 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -522,6 +522,13 @@ ioOutReadTimeout.systemProperty = ${propertyPrefix}.outTimeout
 ioOutReadTimeout.clusterProperty = io.outTimeout
 ioOutReadTimeout.validation.type = long
 
+ioFailoverServerRetryDelay.description = The delay before retrying a failed server when using a "Round-Robin" or "Ordered Sticky with Failover" failover strategy. This setting is used by assertions with a failover strategy such as the Route via HTTP(S), Route via SecureSpan Bridge, and Scan Using ICAP-Enabled Antivirus assertions. A value of zero means the default delay for the selected failover strategy is used (Milliseconds)
+ioFailoverServerRetryDelay.default = 0
+ioFailoverServerRetryDelay.clusterProperty = io.failoverServerRetryDelay
+ioFailoverServerRetryDelay.systemProperty = com.l7tech.common.io.failover.robin.retryMillis
+ioFailoverServerRetryDelay.validation.type = integer
+ioFailoverServerRetryDelay.validation.min = 0
+
 ioHttpsHostVerify.description = Verify server host names against certificate name (true/false)
 ioHttpsHostVerify.default = true
 ioHttpsHostVerify.clusterProperty = io.httpsHostVerify
