SSG-4394: JDBC connections now have an optional username/password. Testing a connection can now be cancelled.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30640 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/JdbcConnectionPropertiesDialog.properties
@@ -47,3 +47,5 @@ message.testing.jdbc.conn.passed=JDBC connection testing passed.
 message.testing.jdbc.conn.failed=Testing failed: {0}
 label.showPassword=Show Password
 
+message.testing.cancel.title = Testing JDBC Connection
+message.testing.cancel.message = Testing JDBC connection, please wait ...
