--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1320,7 +1320,7 @@ sshResponseDownloadThreadLimit.visible = false
 sshRoutingEnabledCiphers.description = The list of ciphers to enable for SSH2 routing, permitted values are "aes128-ctr", "aes192-ctr", "aes256-ctr", "aes128-cbc", "aes192-cbc", "aes256-cbc", "blowfish-cbc", "3des-cbc" (Comma delimited)
 sshRoutingEnabledCiphers.default= aes128-ctr, aes128-cbc, 3des-cbc, blowfish-cbc, aes192-ctr, aes192-cbc, aes256-ctr, aes256-cbc
 sshRoutingEnabledCiphers.clusterProperty = ssh.routingEnabledCiphers
-sshRoutingEnabledCiphers.validation.regex = (aes128-ctr|aes192-ctr|aes256-ctr|aes128-cbc|aes192-cbc|aes256-cbc|blowfish-cbc|3des-cbc)(\\s*,\\s*(aes128-ctr|aes192-ctr|aes256-ctr|aes128-cbc|aes192-cbc|aes256-cbc|blowfish-cbc|3des-cbc))*
+sshRoutingEnabledCiphers.validation.regex = (aes128-ctr|aes192-ctr|aes256-ctr|aes128-cbc|aes192-cbc|aes256-cbc|blowfish-cbc|3des-cbc|none)(\\s*,\\s*(aes128-ctr|aes192-ctr|aes256-ctr|aes128-cbc|aes192-cbc|aes256-cbc|blowfish-cbc|3des-cbc|none))*
 
 customerMapping.addToGatewayAuditEvents.description=Add customer mapping information into the gateway audit, so the user can view the information in Gateway Audit Events window. (true/false)
 customerMapping.addToGatewayAuditEvents.default=true
