SSG-5499: Fix for MQ Native / JMS: Configurable connection sleep delay and retry attempts required
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30709 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -660,6 +660,34 @@ ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.validation.type = long
 ioJmsMessageMaxBytes.validation.min = 0
 
+ioJmsRoutingRetrySleep.description = Time to sleep after a connection error for an outbound JMS Queue (timeunit)
+ioJmsRoutingRetrySleep.default = 1s
+ioJmsRoutingRetrySleep.systemProperty = com.l7tech.server.policy.assertion.jmsRoutingRetryDelay
+ioJmsRoutingRetrySleep.clusterProperty = io.jmsRoutingRetrySleep
+ioJmsRoutingRetrySleep.validation.type = timeUnit
+ioJmsRoutingRetrySleep.validation.min = 0
+
+ioJmsRoutingMaxRetries.description = Maximum number of connection attempts for an outbound JMS Queue.
+ioJmsRoutingMaxRetries.default = 5
+ioJmsRoutingMaxRetries.systemProperty = com.l7tech.server.policy.assertion.jmsRoutingMaxRetries
+ioJmsRoutingMaxRetries.clusterProperty = io.jmsRoutingMaxRetries
+ioJmsRoutingMaxRetries.validation.type = integer
+ioJmsRoutingMaxRetries.validation.min = 1
+
+ioMqRoutingRetrySleep.description = Time to sleep after a connection error for an outbound MQ Queue (timeunit)
+ioMqRoutingRetrySleep.default = 1s
+ioMqRoutingRetrySleep.systemProperty = com.l7tech.external.assertions.mqnative.server.routingRetryDelay
+ioMqRoutingRetrySleep.clusterProperty = io.mqRoutingRetrySleep
+ioMqRoutingRetrySleep.validation.type = timeUnit
+ioMqRoutingRetrySleep.validation.min = 0
+
+ioMqRoutingMaxRetries.description = Maximum number of connection attempts for an outbound MQ Queue.
+ioMqRoutingMaxRetries.default = 5
+ioMqRoutingMaxRetries.systemProperty = com.l7tech.external.assertions.mqnative.server.routingMaxRetries
+ioMqRoutingMaxRetries.clusterProperty = io.mqRoutingMaxRetries
+ioMqRoutingMaxRetries.validation.type = integer
+ioMqRoutingMaxRetries.validation.min = 1
+
 ioMqMessageMaxBytes.description = Maximum number of bytes permitted for a MQ Native Queue message, or 0 for unlimited (Integer)
 ioMqMessageMaxBytes.default = 2621440
 ioMqMessageMaxBytes.systemProperty = ${propertyPrefix}.mqMessageMaxBytes
