bug 11586: fixed by validating all fields which accept variable references to ensure any references are valid. Minor changes: Updated process SAML attribute query dialog to use a pause listener not just when focused.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30720 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
@@ -8,7 +8,7 @@ samlVersionPanel.version=SAML Version:
 samlVersionPanel.signResponse=Sign Response
 
 responseAttributes.title=Response Attributes
-resposneAttributes.Id=ID:
+responseAttributes.Id=ID:
 responseAttributes.issueInstant=Issue Instant:
 responseAttributes.inResponseTo=InResponseTo:
 responseAttributes.destination=Destination:
