Added the AD variable with the necessary explanations.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30839 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -66,6 +66,12 @@ RADIUS_TIMEOUT="3"
 # Default: "ldap"
 LDAP_TYPE="ldap"
 
+# AD variable is either "yes" or "no" to identify the Directory Service as an Active Directory
+# We presently support Windows Server 2003 and newer, including 2008 R2 SP1.
+# It is relevant only if the CFG_TYPE variable is "ldap_only" and it is mandatory.
+# Default: "no"
+AD="no"
+
 # LDAP_SRV variable referes to the LDAP server to be used.
 # It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
 # If LDAP_TYPE is "ldap" a host IP address can be used, e.g. "10.7.48.130" (a CIDR notation may not work).
