SSM-3832: Policy path building will now stop if there are too many paths through a policy.  The default limit is 500,000 and can be increased by setting the cluster property "policyValidation.maxPaths" (for server-side validation), or the system property "policyValidation.maxPaths" (for the SSM, in either "Layer 7 Policy Manager.ini" for the thick client or the Java plug-in control panel for the applet).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30937 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1217,6 +1217,11 @@ serverPolicyValidation.maxConcurrency.default = 15
 serverPolicyValidation.maxConcurrency.clusterProperty = policyValidation.maxConcurrency
 serverPolicyValidation.maxConcurrency.validation.type = integer
 
+policyValidation.maxPaths.description = Maximum number of possible paths through a policy before the policy is considered to be too complex to attempt server-side validation.
+policyValidation.maxPaths.default = 500000
+policyValidation.maxPaths.clusterProperty = policyValidation.maxPaths
+policyValidation.maxPaths.validation.type = integer
+
 policyVersioningMaxRevisions.description = Maximum number of policy revisions to retain. Only revisions that are not active and which do not have a comment count toward the maximum.
 policyVersioningMaxRevisions.default = 20
 policyVersioningMaxRevisions.clusterProperty = policyVersioning.maxRevisions
